--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -5,7 +5,7 @@ img {
 
 .navbar {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   box-shadow: 1px 5px 5px #e0dcdc;
 }
 
